# porec

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
porec/: __init__.py  base.py  basemetric.py  baserec.py  dataset.py  metric.py  randomrec.py
tests/: contents.csv  test_dataset.py  test_metric.py  test_randomrecommend.py
