[tool.poetry]
name = "porec"
version = "0.1.0"
description = ""
authors = ["takeru1205 <takeru0639418@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pandas = "^1.5.1"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
