[tool.poetry]
name = "porec"
version = "0.1.0"
description = ""
authors = ["takeru1205 <takeru0639418@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pandas = "^1.5.1"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.991"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
line-length = 127

[tool.isort]
line_length = 127
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.flake8]
max-line-length = 127
max-complexity = 10
ignore = "E9,F63,F7,F82,"

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]
